--- a/src/sections/LinkNavigation/styles.scss
+++ b/src/sections/LinkNavigation/styles.scss
@@ -40,18 +40,17 @@ $footer-height: 2.5rem;
 }
 
 .linkList {
-  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin: $margin-medium-2 0;
   padding: 0;
+  order: 2;
 }
 
 .footer {
   order: 1;
   flex-grow: 1;
-}
-
-.linkList {
-  order: 2;
 }
 
 @media (min-width: $mobile-layout-threshold-max) {
